# rusty-poker

./: Cargo.toml  README.md
client/: Cargo.toml  index.html
client/assets/css/: styles.css
client/src/: main.rs
common/: Cargo.toml
common/src/: lib.rs
server/: Cargo.toml
server/http/: api.http
server/src/: main.rs  routes.rs  schema.rs  storage.rs  utils.rs
server/src/routes/: api.rs
