[package]
name = "rusty-poker-client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yew="0.19"
web-sys="0.3.60"
log="0.4.17"
wasm-logger="0.2.0"
gloo-net="0.2.4"
serde={version = "1.0.145", features = ["derive"]}
serde_json = "1.0.85"
wasm-bindgen-futures="0.4.33"

rusty-poker-common = { path = "../common" }
