[package]
name = "rusty-poker-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
env_logger = "0.9.1"
log = "0.4.17"
serde={version = "1.0.145", features = ["derive"]}
serde_json = "1.0.85"
rand="0.8.5"